Treat 5s timeout as a too-heavy graphics packet, not a short wait